--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/DavithCH/nodejs-api/issues"
   },
-  "homepage": "https://github.com/DavithCH/nodejs-api#readme"
+  "homepage": "https://github.com/DavithCH/nodejs-api#readme",
+  "dependencies": {
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1"
+  }
 }
